// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Axis Selector snapshot test 1`] = `
<div
  class="axis-selector"
>
  <fieldset>
    <legend>
      Primary scale
    </legend>
    <div>
      <input
        checked=""
        type="radio"
        value="md"
      />
      MD
    </div>
    <div>
      <input
        type="radio"
        value="tvd"
      />
      TVD
    </div>
  </fieldset>
</div>
`;

exports[`Test Axis Selector test when there no axes- empty rendering 1`] = `
<div
  class="axis-selector"
>
  <fieldset>
    <legend>
      Primary scale
    </legend>
  </fieldset>
</div>
`;
